[package]
name = "neotron-xxx-bios"
version = "0.1.0"
authors = ["Some Developer <some.developer@example.com>"]
edition = "2018"
readme = "README.md"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
# TODO add more dependencies here, like the BIOS API crate

# Lets you use cargo-fix
[[bin]]
name = "neotron-xxx-bios"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations