[package]
name = "neotron-desktop-bios"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neotron-common-bios = "0.8"
libloading = "0.7"
pix-engine = "0.5.4"
env_logger = "0.9"
log = "0.4"
