[package]
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
edition = "2021"
license-file = "LICENSE"
name = "neotron-desktop-bios"
readme = "README.md"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2", features = ["derive"]}
env_logger = "0.9"
libloading = "0.7"
log = "0.4"
neotron-common-bios = "0.12"
pix-engine = "0.7"
